name:                wordwang
version:             0.0.0
synopsis:            IT'S WORDWANG!!!
license:             GPL
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
category:            Silly
build-type:          Simple
cabal-version:       >= 1.8
data-dir:            data

executable wordwang-server
  hs-source-dirs:    src
  main-is:           wordwang-server.hs

  other-modules:     WordWang.Utils
                   , WordWang.Messages
                   , WordWang.Objects
                   , WordWang.Bwd
                   , WordWang.Monad
                   , WordWang.PostgreSQL
                   , WordWang

  build-depends:     base                 >= 4 && < 5
                   , DRBG                 >= 0.5
                   , aeson                >= 0.6
                   , base64-bytestring    >= 1.0
                   , bytestring           >= 0.10
                   , crypto-api           >= 0.3
                   , either               >= 3.4
                   , filepath             >= 1.3
                   , hashable             >= 1.1
                   , lens                 >= 3.10
                   , mtl                  >= 2.1
                   , postgresql-simple    >= 0.3
                   , random               >= 1.0
                   , semigroups           >= 0.11
                   , snap                 >= 0.13
                   , snap-core            >= 0.9
                   , string-combinators   >= 0.6
                   , text                 >= 0.11
                   , text-format          >= 0.3
                   , transformers         >= 0.3
                   , unordered-containers >= 0.2
                   , uuid                 >= 1.3
                   , websockets           >= 0.8
                   , websockets-snap      >= 0.8

  Extensions:        DeriveDataTypeable
                   , DeriveFoldable
                   , DeriveFunctor
                   , DeriveTraversable
                   , ExistentialQuantification
                   , FlexibleInstances
                   , LambdaCase
                   , OverloadedStrings
                   , PatternGuards
                   , QuasiQuotes
                   , RankNTypes
                   , ScopedTypeVariables
                   , TemplateHaskell
                   , TupleSections
                   , ViewPatterns

  ghc-options:       -threaded -Wall -rtsopts -with-rtsopts=-T -O2
  ghc-prof-options:  -auto-all
