name:                wordwang
version:             0.0.0
synopsis:            IT'S WORDWANG!!!
license:             GPL
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
category:            Silly
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs:    src

  exposed-modules:   WordWang

  build-depends:     base >= 4 && < 5
                   , websockets >= 0.7
                   , snap >= 0.13
                   , uuid >= 1.3
                   , text >= 0.11
                   , aeson >= 0.6
                   , bytestring >= 0.10
                   , string-combinators >= 0.6
                   , unordered-containers >= 0.2
                   , hashable >= 1.1

executable wordwang-server
  main-is:           wordwang-server.hs
  
  ghc-options:       -threaded -Wall -rtsopts -with-rtsopts=-T -O2

  ghc-prof-options:  -auto-all

  build-depends:     base >= 4 && < 5
                   , wordwang
