name:                wordwang
version:             0.0.0
synopsis:            IT'S WORDWANG!!!
license:             GPL
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
category:            Silly
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs:    src

  exposed-modules:   WordWang
                   , WordWang.Messages
                   , WordWang.Monad
                   , WordWang.Objects

  other-modules:     WordWang.Utils
                   , WordWang.Queue

  build-depends:     base                 >= 4 && < 5
                   , aeson                >= 0.6
                   , bytestring           >= 0.10
                   , either               >= 3.4
                   , hashable             >= 1.1
                   , lens                 >= 3.10
                   , mtl                  >= 2.1
                   , postgresql-simple    >= 0.3
                   , snap                 >= 0.13
                   , string-combinators   >= 0.6
                   , text                 >= 0.11
                   , unordered-containers >= 0.2
                   , uuid                 >= 1.3
                   , websockets           >= 0.8
                   , websockets-snap      >= 0.8

  Extensions:        FlexibleInstances
                   , OverloadedStrings
                   , PatternGuards
                   , ScopedTypeVariables
                   , TemplateHaskell
                   , TupleSections
                   , ViewPatterns

  ghc-options:       -threaded -Wall -rtsopts -with-rtsopts=-T -O2

  ghc-prof-options:  -auto-all

executable wordwang-server
  main-is:           wordwang-server.hs
  
  ghc-options:       -threaded -Wall -rtsopts -with-rtsopts=-T -O2

  ghc-prof-options:  -auto-all

  build-depends:     wordwang
                   , base                 >= 4 && < 5
                   , bytestring           >= 0.10
                   , snap                 >= 0.13
                   , unordered-containers >= 0.2

  Extensions:        OverloadedStrings
